--- a/index.html
+++ b/index.html
@@ -438,18 +438,18 @@
 
             <ol>
                 <li class="lista">
-                     <a href="http://journals.lww.com/nsca-jscr/Citation/2014/04000/The_Acute_Hormonal_Response_to_Free_Weight_and.22.aspx;">http://journals.lww.com/nsca-jscr/Citation/2014/04000/The_Acute_Hormonal_Response_to_Free_Weight_and.22.aspx;</a>
+                     <a href="http://journals.lww.com/nsca-jscr/Citation/2014/04000/The_Acute_Hormonal_Response_to_Free_Weight_and.22.aspx;" class="link" target="_blank">http://journals.lww.com/nsca-jscr/Citation/2014/04000/The_Acute_Hormonal_Response_to_Free_Weight_and.22.aspx;</a>
                 </li>
-                <li  class="lista">Human Performance Laboratory, Ball State University, Muncie, IN. NSCA Conference
-                    Abstract (2000);</li>
+    
                 <li class="lista">
-                   <a href=" http://www.researchgate.net/publication/232159224_Unilateral_Support_Resistance_Training_Incorporating_the_Hip_and_Knee;">http://www.researchgate.net/publication/232159224_Unilateral_Support_Resistance_Training_Incorporating_the_Hip_and_Knee;
+                   <a href=" http://www.researchgate.net/publication/232159224_Unilateral_Support_Resistance_Training_Incorporating_the_Hip_and_Knee;" class="link" target="_blank">http://www.researchgate.net/publication/232159224_Unilateral_Support_Resistance_Training_Incorporating_the_Hip_and_Knee;
                 </li></a> 
-                <li class="lista">
-                    <a href="http://www.ncbi.nlm.nih.gov/pubmed/25254898/;">http://www.ncbi.nlm.nih.gov/pubmed/25254898/;</a></li>
 
                 <li class="lista">
-                    <a href="https://www.ncbi.nlm.nih.gov/pubmed/19996770/;">https://www.ncbi.nlm.nih.gov/pubmed/19996770/;</a></li>
+                    <a href="http://www.ncbi.nlm.nih.gov/pubmed/25254898/;" class="link" target="_blank">http://www.ncbi.nlm.nih.gov/pubmed/25254898/;</a></li>
+
+                <li class="lista">
+                    <a href="https://www.ncbi.nlm.nih.gov/pubmed/19996770/;" class="link" target="_blank">https://www.ncbi.nlm.nih.gov/pubmed/19996770/;</a></li>
             </ol>
 
         </div>
